--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,10 @@
         <title>iRestify Admin Portal</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <link rel="stylesheet" href="/shared/client/css/material.blue_grey-orange.min.css" />
-        <link rel="stylesheet" href="/shared/client/css/jsphere.mdl.css"/>
-        <link rel="stylesheet" href="/main/client/css/app.css"/>
-        <script src="/shared/client/lib/material.min.js" defer></script>
-        <script src="/shared/client/lib/jsphere.mdl.js" type="module"></script>
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/GreenAntTech/JSphereServer/main/client/css/material.blue_grey-orange.min.css" />
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/GreenAntTech/JSphereServer/main/client/css/jsphere.mdl.css"/>
+        <script src="https://raw.githubusercontent.com/GreenAntTech/JSphereServer/main/client/lib/material.min.js" defer></script>
+        <script src="https://raw.githubusercontent.com/GreenAntTech/JSphereServer/main/client/lib/jsphere.mdl.js" type="module"></script>
         <script src="/testrunner/client/bootstrap.js" type="module"></script>
     </head>
     <body>
